# dmmdzz_injector

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_driver.bat  build_driver.ps1  build_usermode.ps1  coindump  deploy.ps1  disable_hvci.ps1  driver.7z  enable_hvci.ps1  latestdump  newdump  res  sign_driver.ps1
KDU-1.4.9/Source/Hamakaze/: diag.cpp  drvmap.cpp  envdetect.cpp  envdetect.h  hvdetect.cpp  hvdetect.h  ipcsvc.cpp  provdb.cpp  provdb.h  ps.cpp  ps.h  shellcode.cpp  sym.cpp  victim.cpp
KDU-1.4.9/Source/Hamakaze/idrv/: ipcdec.cpp  winring0.cpp  winring0.h  zemana.cpp
KDU-1.4.9/Source/Taigei/: ipc.cpp
KDU-1.4.9/Source/Utils/PCOMP/: PCOMP.cpp  PCOMP.vcxproj  PCOMP.vcxproj.filters
asm/: CMakeLists.txt  example.c  syscall_demo.asm
cmake/: FindWDK.cmake  toolchain-mingw-x86_64.cmake
deploy/: 6bb700b9.inf
driver/: CMakeLists.txt  dmmdzz_injector.inf  dmmdzz_injector.vcxproj  driver.h  ioctl.c  main.c  memory.c  modules.c  process.c  ptrscan.c
usermode/: CMakeLists.txt  ce_cli.cpp  driver_ctl.cpp  driver_ctl.hpp  driver_loader.cpp  driver_loader.hpp  main.cpp  process.cpp  process.hpp  scanner.cpp  scanner.hpp
